--- a/week1/validation/index.html
+++ b/week1/validation/index.html
@@ -14,7 +14,7 @@
                 <div class="formGroup">
                     <p>이름</p>
                     <input type="text" id="name" name="name">
-                    <p id="nameMessage" class="message-error"></p>
+                    <div id="nameMessage" class="message"></div>
                 </div>
                 <div class="formGroup">
                     <p>이메일</p>
