--- a/week1/validation/index.html
+++ b/week1/validation/index.html
@@ -41,6 +41,15 @@
             </form>
         </div>
     </div>
+    <div class="modalContainer">
+        <div class="modal">
+            <h3 id="modalTitle">가입 성공!</h3>
+            <p id="modalText">umc 챌린저 가입을 축하합니다!!</p>
+            <div class="modalBtn">
+                <button id="close">닫기</button>
+            </div>
+        </div>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
