fix: 폼 기본동작 방지

--- a/조이-안지유/week1/validation/index.html
+++ b/조이-안지유/week1/validation/index.html
@@ -36,9 +36,8 @@
                     <input type="password" id="checkPassword" name="checkPassword">
                     <div id="checkPasswordMessage" class="message"></div>
                 </div>
-
-                <button type="submit" id="submitButton" disabled>가입하기</button>
             </form>
+            <button type="button" id="submitButton" form="signupForm" disabled>가입하기</button>
         </div>
     </div>
     <div class="modalContainer">
